test/spec_vectors/loop/fail/module_35.wat
(module (func $type-param-nested-void-vs-num (block (loop (param i32) (drop)))))